--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "advent-2023"
-version = "0.1.0"
 edition = "2021"
+name = "advent-2023"
+publish = false
+rust-version = "1.80"
+version = "0.1.0"
 
 [build-dependencies]
 
